Added : add DOMUtil.js

--- a/dom/example.html
+++ b/dom/example.html
@@ -27,7 +27,7 @@
    }, false);
    
    var div = document.getElementById('test');
-   var textNode = document.createTextNode(window.getComputedStyle === document.defaultView.getComputedStyle);
+   var textNode = document.createTextNode(getComputedStyle === document.defaultView.getComputedStyle);
    div.appendChild(textNode);
 
 
